Implemented group view and more code refactoring
Updated hrefs with ui-srefs in some account views.
Added avatars to who to follow suggestions.
Hid avatar in drag and drop area in profile account page.
Changed public group color to blue and private group color to grey.
Changed look of sidebars by using bootstrap panels.
Moved who to follow under trending section for home sidebar.
Fixed some controller variables not being referenced from $scope.
Removed unnecessary injections of profile.
Renamed some functions in controllers that act as toggles for clarity.
Added ‘follows you’ indicator.
Added indicator on group view to show who the group admin is.
Removed Information section entirely from profile sidebar.

--- a/src/main/webapp/app/components/account/AccountView.html
+++ b/src/main/webapp/app/components/account/AccountView.html
@@ -10,14 +10,14 @@
                         <div id="avatar">
                             <div class="row text-center nomargin avatar-float-center-container">
                                 <div>
-                                    <!-- Setting src="{{ avatarURL }}" causes a MIME type message, not sure why -->
-                                    <!-- This error might not occur anymore because of ng-src tag, needs testing -->
                                     <img class="nomargin avatar img-rounded" ng-src="{{ profile.avatarURL }}">
                                 </div>
                                 <br>
                                 <div>
-                                    <a href="#/home/profile/{{ profile.username }}">
+                                    <a ui-sref="home.profile.statuses({ username: profile.username })">
                                         <h3 class="user-profile">{{ profile.firstName + ' ' + profile.lastName }}</h3>
+                                    </a>
+                                    <a ui-sref="home.profile.statuses({ username: profile.username })">
                                         <p>@{{ profile.username }}</p>
                                     </a>
                                 </div>
