--- a/src/main/webapp/app/components/home/tag/TagHeaderView.html
+++ b/src/main/webapp/app/components/home/tag/TagHeaderView.html
@@ -11,7 +11,7 @@
         <div class="tatams-content-title">
             <h3>
                 <strong ng-if="$state.current.name == 'home.home.tag'">#{{ tag.name }}</strong>
-                <a ng-click="followTag()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title toggleTag pull-right label" ng-class="{ 'label-danger': tag.followed && hover, 'label-info': tag.followed && !hover }">
+                <a ng-click="followUnfollowTag()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title toggleTag pull-right label" ng-class="{ 'label-danger': tag.followed && hover, 'label-info': tag.followed && !hover }">
                     <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'">
                         <span ng-if="!tag.followed" class="hidden-phone" translate="tatami.home.tag.follow"></span>
                         <span ng-if="tag.followed && !hover" class="hidden-phone" translate="tatami.home.tag.following"></span>
