--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -9,7 +9,7 @@
                         <label class="control-label"></label>
                         <div class="controls">
                             <div class="dropzone well">
-                                <img class="nomargin avatar img-rounded" ng-src="{{ userProfile.avatarURL }}" alt="">
+                                <!--<img class="nomargin avatar img-rounded" ng-src="{{ userProfile.avatarURL }}" alt="">-->
                                 <p class="little-padding-top" translate="tatami.account.profile.dropPhoto"></p>
                                 <!--
                                 <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
