--- a/src/main/webapp/app/components/account/tags/TagsView.html
+++ b/src/main/webapp/app/components/account/tags/TagsView.html
@@ -29,10 +29,10 @@
                         <div>
                             <tr ng-repeat="tag in tags">
                                 <td>
-                                    <a href="/tatami/home/#/tags/{{ tag.name }}" title="{{ tag.name }}">#{{ tag.name }}</a>
+                                    <a ui-sref="home.home.tag({ tag: tag.name })" title="{{ tag.name }}">#{{ tag.name }}</a>
                                 </td>
                                 <td class="follow">
-                                    <a ng-click="followTag(tag, $index)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title toggleTag pull-right label labelSizeNormal" ng-class="{ 'label-danger': tag.followed && hover, 'label-info': tag.followed && !hover }">
+                                    <a ng-click="followTag(tag, $index)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn-title pull-right label labelSizeNormal" ng-class="{ 'label-danger': tag.followed && hover, 'label-info': tag.followed && !hover }">
                                         <span class="glyphicon" ng-class="tag.followed ? 'glyphicon-minus' : 'glyphicon-plus'">
                                             <span ng-if="!tag.followed" class="hidden-phone" translate="tatami.home.tag.follow"></span>
                                             <span ng-if="tag.followed && !hover" class="hidden-phone" translate="tatami.home.tag.following"></span>
