Working on users tab

--- a/src/main/webapp/app/components/account/FormView.html
+++ b/src/main/webapp/app/components/account/FormView.html
@@ -1,3 +1,7 @@
-<div>
-    <ui-view></ui-view>
+<div class="col-span-8">
+    <div class="alert alert-status">
+        <div>
+            <ui-view></ui-view>
+        </div>
+    </div>
 </div>
