--- a/src/main/webapp/app/components/account/AccountView.html
+++ b/src/main/webapp/app/components/account/AccountView.html
@@ -45,7 +45,7 @@
                                     <i class="glyphicon glyphicon-file"></i> {{ 'tatami.account.files.title' | translate }}
                                     </a>
                                 </li>
-                                <li ui-sref-active="active">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('account.users') != -1 }">
                                     <a ui-sref="account.users">
                                     <i class="glyphicon glyphicon-globe"></i> {{ 'tatami.account.users.title' | translate }}
                                     </a>
@@ -55,7 +55,7 @@
                                     <i class="glyphicon glyphicon-th-large"></i> {{ 'tatami.account.groups.title' | translate }}
                                     </a>
                                 </li>
-                                <li ui-sref-active="active">
+                                <li ng-class="{ 'active': $state.current.name.indexOf('account.tags') != -1 }">
                                     <a ui-sref="account.tags">
                                     <i class="glyphicon glyphicon-tags"></i> {{ 'tatami.account.tags.title' | translate }}
                                     </a>
