--- a/src/main/webapp/app/components/account/users/UsersView.html
+++ b/src/main/webapp/app/components/account/users/UsersView.html
@@ -1,8 +1,8 @@
 <div>
     <div class="tabMenu">
         <ul class="nav nav-tabs">
-            <li ng-class="{ 'active': $state.current.name === 'account.users' }">
-                <a ui-sref="account.users" translate="tatami.account.users.myFriends"></a>
+            <li ng-class="{ 'active': $state.current.name === 'account.users.list' }">
+                <a ui-sref="account.users.list" translate="tatami.account.users.myFriends"></a>
             </li>
             <li ng-class="{ 'active': $state.current.name === 'account.users.recommended' }">
                 <a ui-sref="account.users.recommended" translate="tatami.account.users.recommend"></a>
