--- a/src/main/webapp/app/components/about/presentation/PresentationView.html
+++ b/src/main/webapp/app/components/about/presentation/PresentationView.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="offset2 span8">
-        <h1 translate="tatami.presentation.title"></h1>
+        <h1 translate="tatami.about.presentation.title"></h1>
         <br><br>
     </div>
 </div>
@@ -9,18 +9,18 @@
     <div class="col-span-8">
         <br>
         <p>
-        <h2 translate="tatami.presentation.row1.title"></h2>
+        <h2 translate="tatami.about.presentation.row1.title"></h2>
         </p>
         <ul>
-            <li translate="tatami.presentation.row1.line1"></li>
-            <li translate="tatami.presentation.row1.line2"></li>
-            <li translate="tatami.presentation.row1.line3"></li>
-            <li translate="tatami.presentation.row1.line4"></li>
-            <li translate="tatami.presentation.row1.line5"></li>
-            <li translate="tatami.presentation.row1.line6"></li>
-            <li translate="tatami.presentation.row1.line7"></li>
-            <li translate="tatami.presentation.row1.line8"></li>
-            <li translate="tatami.presentation.row1.line9"></li>
+            <li translate="tatami.about.presentation.row1.line1"></li>
+            <li translate="tatami.about.presentation.row1.line2"></li>
+            <li translate="tatami.about.presentation.row1.line3"></li>
+            <li translate="tatami.about.presentation.row1.line4"></li>
+            <li translate="tatami.about.presentation.row1.line5"></li>
+            <li translate="tatami.about.presentation.row1.line6"></li>
+            <li translate="tatami.about.presentation.row1.line7"></li>
+            <li translate="tatami.about.presentation.row1.line8"></li>
+            <li translate="tatami.about.presentation.row1.line9"></li>
         </ul>
     </div>
 </div>
@@ -30,35 +30,35 @@
         <br>
         <br>
         <p>
-        <h2 translate="tatami.presentation.row2.title"></h2>
+        <h2 translate="tatami.about.presentation.row2.title"></h2>
         </p>
         <ul>
-            <li translate="tatami.presentation.row2.line1"></li>
-            <li translate="tatami.presentation.row2.line2"></li>
-            <li translate="tatami.presentation.row2.line3"></li>
+            <li translate="tatami.about.presentation.row2.line1"></li>
+            <li translate="tatami.about.presentation.row2.line2"></li>
+            <li translate="tatami.about.presentation.row2.line3"></li>
         </ul>
     </div>
-    <div class="col-span-4"><img src="/assets/img/presentation_devices.jpg" width="200" height="267" title="{{ 'tatami.presentation.devices' | translate }}"></div>
+    <div class="col-span-4"><img src="/assets/img/presentation_devices.jpg" width="200" height="267" title="{{ 'tatami.about.presentation.devices' | translate }}"></div>
 </div>
 <div class="row">
     <br>
     <br>
     <br>
-    <div class="col-span-8"><img src="/assets/img/presentation_opensource.jpg" width="250" height="216" title="{{ 'tatami.presentation.openSource' | translate }}"></div>
+    <div class="col-span-8"><img src="/assets/img/presentation_opensource.jpg" width="250" height="216" title="{{ 'tatami.about.presentation.openSource' | translate }}"></div>
     <div class="col-span-4">
         <p>
-        <h2 translate="tatami.presentation.row3.title"></h2>
+        <h2 translate="tatami.about.presentation.row3.title"></h2>
         </p>
         <ul>
-            <li translate="tatami.presentation.row3.line1"></li>
-            <li translate="tatami.presentation.row3.line2"></li>
-            <li translate="tatami.presentation.row3.line3"></li>
-            <li translate="tatami.presentation.row3.line4"></li>
-            <li translate="tatami.presentation.row3.line5"></li>
-            <li translate="tatami.presentation.row3.line6"></li>
-            <li translate="tatami.presentation.row3.line7"></li>
+            <li translate="tatami.about.presentation.row3.line1"></li>
+            <li translate="tatami.about.presentation.row3.line2"></li>
+            <li translate="tatami.about.presentation.row3.line3"></li>
+            <li translate="tatami.about.presentation.row3.line4"></li>
+            <li translate="tatami.about.presentation.row3.line5"></li>
+            <li translate="tatami.about.presentation.row3.line6"></li>
+            <li translate="tatami.about.presentation.row3.line7"></li>
             <li>
-                <span translate="tatami.presentation.row3.line8"></span>
+                <span translate="tatami.about.presentation.row3.line8"></span>
                 <a href="https://github.com/ippontech/tatami">https://github.com/ippontech/tatami</a>
             </li>
         </ul>
@@ -69,15 +69,15 @@
 <div class="row">
     <div class="col-span-8">
         <p>
-        <h2 translate="tatami.presentation.row4.title"></h2>
+        <h2 translate="tatami.about.presentation.row4.title"></h2>
         </p>
         <ul>
             <li>
-                <span translate="tatami.presentation.row4.line1"></span>
+                <span translate="tatami.about.presentation.row4.line1"></span>
                 <a href="https://tatami.ippon.fr">https://tatami.ippon.fr</a>
             </li>
-            <li translate="tatami.presentation.row4.line2"></li>
-            <li translate="tatami.presentation.row4.line3"></li>
+            <li translate="tatami.about.presentation.row4.line2"></li>
+            <li translate="tatami.about.presentation.row4.line3"></li>
         </ul>
     </div>
     <div class="col-span-4"><img src="/assets/img/company-logo-bookmark.png" width="150" height="148" title="{{ 'tatami.menu.logo' | translate }}"></div>
@@ -85,11 +85,11 @@
 <div class="row">
     <div class="col-span-12">
         <p>
-        <h2 translate="tatami.presentation.row5.title"></h2>
+        <h2 translate="tatami.about.presentation.row5.title"></h2>
         </p>
         <ul>
             <li>
-                <span translate="tatami.presentation.row5.line1"></span>
+                <span translate="tatami.about.presentation.row5.line1"></span>
                 <a href="mailto:commercial@ippon.fr">commercial@ippon.fr</a>
             </li>
         </ul>
