--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -99,8 +99,7 @@ h4 {
     background-color: black;
 }
 .controle-group {
-    padding: 0px 0px 5px;
-    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .quota {
     color: #333333;
