added autofocus to login email field

--- a/src/main/webapp/app/components/login/LoginView.html
+++ b/src/main/webapp/app/components/login/LoginView.html
@@ -43,7 +43,7 @@
                     <form action="/tatami/authentication" method="post" accept-charset="utf-8" id="loginForm">
                         <fieldset>
                             <div class="controle-group">
-                                <input id="j_username" name="j_username" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}">
+                                <input id="j_username" name="j_username" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}" autofocus>
                             </div>
                             <div class="controle-group">
                                 <input id="j_password" name="j_password" type="password" required="required" placeholder="{{ 'tatami.login.password' | translate }}">
