--- a/src/main/webapp/app/components/account/files/FilesView.html
+++ b/src/main/webapp/app/components/account/files/FilesView.html
@@ -6,7 +6,11 @@
         </div>
         <div>
             <div class="progress">
-                <div class="progress-bar progress-bar-success" style="width: {{quota}}%;">
+                <!-- progress-bar-danger = red (80-100)
+                     progress-bar-warning = orange (50-79)
+                     progress-bar-success = green (0-50)
+                -->
+                <div ng-class="setColor()" style="width: {{quota}}%;">
                     <span class="quota">{{ quota }}%</span>
                 </div>
             </div>
