--- a/src/main/webapp/app/components/login/LoginView.html
+++ b/src/main/webapp/app/components/login/LoginView.html
@@ -21,10 +21,10 @@
                     </ul>
                     <form action="/tatami/register" method="post" accept-charset="utf-8" id="registrationForm">
                         <fieldset>
-                            <div class="controle-group">
+                            <div class="control-group">
                                 <input name="email" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}">
                             </div>
-                            <div class="text-center controle-group">
+                            <div class="text-center control-group">
                                 <button translate="tatami.login.register.title" type="submit" class="btn btn-primary btn-block" id="registrationButton"></button>
                             </div>
                         </fieldset>
@@ -42,13 +42,13 @@
                 <div class="panel-body">
                     <form action="/tatami/authentication" method="post" accept-charset="utf-8" id="loginForm">
                         <fieldset>
-                            <div class="controle-group">
+                            <div class="control-group">
                                 <input id="j_username" name="j_username" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}" autofocus>
                             </div>
-                            <div class="controle-group">
+                            <div class="control-group">
                                 <input id="j_password" name="j_password" type="password" required="required" placeholder="{{ 'tatami.login.password' | translate }}">
                             </div>
-                            <div class="controle-group">
+                            <div class="control-group">
                                 <input id="_spring_security_remember_me" name="_spring_security_remember_me" type="checkbox">
                                 <span translate="tatami.login.remember"></span>
                             </div>
@@ -67,7 +67,7 @@
                 <div class="panel-body">
                     <form action="/tatami/lostpassword" method="post" accept-charset="utf-8">
                         <fieldset>
-                            <div class="controle-group">
+                            <div class="control-group">
                                 <input name="email" type="email" required="required" placeholder="{{ 'tatami.login.email' | translate }}">
                             </div>
                             <div class="text-center">
@@ -98,7 +98,7 @@
                     <form action="/tatami/j_spring_openid_security_check" method="post" accept-charset="utf-8">
                         <fieldset>
                             <input name="openid_identifier" type="hidden" value="https://www.google.com/accounts/o8/id">
-                            <div class="text-center controle-group">
+                            <div class="text-center control-group">
                                 <button translate="tatami.login.googleApps.login" type="submit" id="proceed_google" class="btn btn-primary btn-block"></button>
                             </div>
                         </fieldset>
