fixed group description not displaying

--- a/src/main/webapp/app/components/account/groups/GroupsManageView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsManageView.html
@@ -12,7 +12,7 @@
             <div class="control-group">
                 <label class="control-label" for="description" translate="tatami.account.groups.description"></label>
                 <div class="controls">
-                    <textarea name="description" class="input-xlarge col-span-12" ng-model="group.desciption"></textarea>
+                    <textarea name="description" class="input-xlarge col-span-12" ng-model="group.description"></textarea>
                 </div>
             </div>
             <div class="control-group">
