--- a/src/main/webapp/app/components/home/post/PostView.html
+++ b/src/main/webapp/app/components/home/post/PostView.html
@@ -1,6 +1,6 @@
 <div>
     <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeModal()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeModal()"><span class="glyphicon glyphicon-remove"></span></button>
         <h4 class="modal-title" translate="tatami.home.post.update"></h4>
     </div>
     <div class="modal-body">
@@ -49,7 +49,7 @@
                         <div class="markdown" ng-bind-html="currentStatus.content | emoticon | markdown"></div>
 
                         <small ng-if="currentStatus.groupId">
-                            <a class="label" ng-class="{ 'label-info': status.publicGroup }" ui-sref="home.home.group.statuses({ groupId: currentStatus.groupId })">
+                            <a class="label" ng-class="{ 'label-info': !status.publicGroup, 'label-warning': status.publicGroup }" ui-sref="home.home.group.statuses({ groupId: currentStatus.groupId })">
                             {{ currentStatus.groupName }}
                             </a>
                             <br>
