Fixed a backend bug. In the GroupService, when a group is built (in GroupService.BuildGroup), the membership/admin status of the user is only ever set to true. Added logic to set membership/admin status to false when the user is no longer a member.

--- a/src/main/webapp/app/components/account/groups/GroupsManageView.html
+++ b/src/main/webapp/app/components/account/groups/GroupsManageView.html
@@ -57,6 +57,33 @@
                         </li>
                     </ul>
                     -->
+                    <table class="table">
+                        <tbody>
+                            <tr ng-repeat="member in searchedMembers">
+                                <td style="text-align: left">
+                                    <div class="pull-left background-image-fffix little-marge-right">
+                                        <img class="img-rounded img-medium" ng-style="{ 'background-image': 'url(' + member.avatarURL + ')' }">
+                                    </div>
+                                    <h4>
+                                        <a ui-sref="home.profile.statuses({ username: member.username })">
+                                            <strong>
+                                                {{ member.firstName + ' ' + member.lastName }}
+                                            </strong>
+                                        </a>
+                                        <br>
+                                        <a ui-sref="home.profile.statuses({ username: member.username })">
+                                            <small>
+                                                @{{ member.username }}
+                                            </small>
+                                        </a>
+                                    </h4>
+                                </td>
+                                <td>
+                                    <button ng-click="addUser(member)" type="button" class="btn btn-success input-block-level delete" translate="tatami.account.groups.remove"></button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
             <br>
